--- a/BusBookingSystem/src/main/resources/templates/register.html
+++ b/BusBookingSystem/src/main/resources/templates/register.html
@@ -41,12 +41,13 @@
                 <div class="card shadow-lg">
                     <div class="card-body p-5">
                         <h1 class="fs-4 card-title text-center fw-bold mb-4">Sign Up</h1>
-                        <form method="POST" class="needs-validation" novalidate="" autocomplete="off">
+                        <form method="POST" class="needs-validation" novalidate="" autocomplete="off" th:action="@{/sign-up}" th:object="${user}">
                             <div class="mb-3">
                                 <label class="mb-2 text-muted" for="first-name">First Name</label>
                                 <input id="first-name" type="text" class="form-control" name="first-name" value=""
                                        required
-                                       autofocus>
+                                       autofocus
+                                       th:field="*{firstName}">
                                 <div class="invalid-feedback">
                                     Name is required
                                 </div>
@@ -56,7 +57,8 @@
                                 <label class="mb-2 text-muted" for="last-name">Last Name</label>
                                 <input id="last-name" type="text" class="form-control" name="last-name" value=""
                                        required
-                                       autofocus>
+                                       autofocus
+                                       th:field="*{lastName}">
                                 <div class="invalid-feedback">
                                     Name is required
                                 </div>
@@ -64,7 +66,9 @@
 
                             <div class="mb-3">
                                 <label class="mb-2 text-muted" for="email">E-Mail Address</label>
-                                <input id="email" type="email" class="form-control" name="email" value="" required>
+                                <input id="email" type="email" class="form-control" name="email" value=""
+                                       required
+                                       th:field="*{email}">
                                 <div class="invalid-feedback">
                                     Email is invalid
                                 </div>
@@ -72,7 +76,9 @@
 
                             <div class="mb-3">
                                 <label class="mb-2 text-muted" for="password">Password</label>
-                                <input id="password" type="password" class="form-control" name="password" required>
+                                <input id="password" type="password" class="form-control" name="password"
+                                       required
+                                       th:field="*{password}">
                                 <div class="invalid-feedback">
                                     Password is required
                                 </div>
@@ -82,6 +88,9 @@
                                 <button type="submit" class="btn btn-primary ms-auto">
                                     Register
                                 </button>
+                            </div>
+                            <div th:if="${param.success}">
+                                <div class="alert alert-info">You've successfully registered.</div>
                             </div>
                         </form>
                     </div>
