--- a/BusBookingSystem/src/main/resources/templates/account.html
+++ b/BusBookingSystem/src/main/resources/templates/account.html
@@ -3,7 +3,7 @@
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
     <meta charset="UTF-8">
-    <title>Bus Booking System</title>
+    <title>Account Management</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
@@ -11,7 +11,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #178f13">
     <div class="container-fluid">
         <a class="navbar-brand">
-            <img src="/assets/bus-icon.png" alt="" width="32" height="32" class="d-inline-block align-text-top" th:src="@{/assets/bus-icon.png}">
+            <img src="/assets/bus-icon.png" alt="" width="32" height="32" class="d-inline-block align-text-top"
+                 th:src="@{/assets/bus-icon.png}">
             Bus Booking System
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
@@ -27,27 +28,14 @@
         </div>
         <div class="navbar-collapse collapse w-100 order-3 dual-collapse2 justify-content-end">
             <div class="navbar-nav">
-                <div sec:authorize="!isAuthenticated()">
-                    <a class="nav-link active" href="#" th:href="@{/sign-up}">Sign Up</a>
-                </div>
-                <div sec:authorize="!isAuthenticated()">
-                    <a class="nav-link active" href="#" th:href="@{/sign-in}">Sign In</a>
-                </div>
-                <div sec:authorize="isAuthenticated()">
-                    <a class="nav-link active" href="#" th:href="@{/account}">Account</a>
-                </div>
-                <div sec:authorize="isAuthenticated()">
-                    <a class="nav-link active" href="#" th:href="@{/logout}">Logout</a>
-                </div>
+                <a class="nav-link active" href="#" th:href="@{/logout}">Logout</a>
             </div>
         </div>
     </div>
 </nav>
-<br>
-<div sec:authorize="!isAuthenticated()">
-    <div th:if="${param.logout}">
-        <div class="alert alert-info">You have been logged out.</div>
-    </div>
+<div>
+    <h1>Welcome <span sec:authentication="principal.firstName"></span> <span
+            sec:authentication="principal.lastName"></span></h1>
 </div>
 </body>
 </html>
