--- a/BusBookingSystem/src/main/resources/templates/account.html
+++ b/BusBookingSystem/src/main/resources/templates/account.html
@@ -8,7 +8,7 @@
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="shortcut icon" type="icon/ico" th:href="@{/assets/favicon.ico}"/>
 </head>
-<body>
+<body style="background-color: #e1f2ea">
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #178f13">
     <div class="container-fluid">
         <a class="navbar-brand">
@@ -34,9 +34,10 @@
         </div>
     </div>
 </nav>
-<div>
-    <h1>Welcome <span sec:authentication="principal.firstName"></span> <span
-            sec:authentication="principal.lastName"></span></h1>
+<div class="info">
+    First Name: <span sec:authentication="principal.firstName"></span> <br>
+    Last Name: <span sec:authentication="principal.lastName"></span> <br>
+    Email: <span sec:authentication="principal.email"></span> <br>
 </div>
 </body>
 </html>
