--- a/BusBookingSystem/src/main/resources/templates/login.html
+++ b/BusBookingSystem/src/main/resources/templates/login.html
@@ -7,7 +7,7 @@
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="shortcut icon" type="icon/ico" th:href="@{/assets/favicon.ico}"/>
 </head>
-<body>
+<body style="background-color: #e1f2ea">
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #178f13">
     <div class="container-fluid">
         <a class="navbar-brand">
