--- a/BusBookingSystem/src/main/resources/templates/index.html
+++ b/BusBookingSystem/src/main/resources/templates/index.html
@@ -7,47 +7,138 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="shortcut icon" type="icon/ico" th:href="@{/assets/favicon.ico}"/>
+
+    <style>
+        html,
+        body {
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            height: 100vh;
+            width: 100vw;
+        }
+
+        * {
+            box-sizing: border-box;
+        }
+    </style>
 </head>
-<body>
-<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #178f13">
-    <div class="container-fluid">
-        <a class="navbar-brand">
-            <img src="/assets/bus-icon.png" alt="" width="32" height="32" class="d-inline-block align-text-top" th:src="@{/assets/bus-icon.png}">
-            Bus Booking System
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="#" th:href="@{/}">Home</a>
-                <a class="nav-link" href="#">Features</a>
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </div>
-        </div>
-        <div class="navbar-collapse collapse w-100 order-3 dual-collapse2 justify-content-end">
-            <div class="navbar-nav">
-                <div sec:authorize="!isAuthenticated()">
-                    <a class="nav-link active" href="#" th:href="@{/sign-up}">Sign Up</a>
-                </div>
-                <div sec:authorize="!isAuthenticated()">
-                    <a class="nav-link active" href="#" th:href="@{/sign-in}">Sign In</a>
-                </div>
-                <div sec:authorize="isAuthenticated()">
-                    <a class="nav-link active" href="#" th:href="@{/account}">Account</a>
-                </div>
-                <div sec:authorize="isAuthenticated()">
-                    <a class="nav-link active" href="#" th:href="@{/logout}">Logout</a>
+<body style="background-color: #e1f2ea">
+<div style="height: 100%;">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #178f13">
+        <div class="container-fluid">
+            <a class="navbar-brand">
+                <img src="/assets/bus-icon.png" alt="" width="32" height="32" class="d-inline-block align-text-top"
+                     th:src="@{/assets/bus-icon.png}">
+                Bus Booking System
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link active" aria-current="page" href="#" th:href="@{/}">Home</a>
+                    <a class="nav-link" href="#">Features</a>
+                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
                 </div>
             </div>
+            <div class="navbar-collapse collapse w-100 order-3 dual-collapse2 justify-content-end">
+                <div class="navbar-nav">
+                    <div sec:authorize="!isAuthenticated()">
+                        <a class="nav-link active" href="#" th:href="@{/sign-up}">Sign Up</a>
+                    </div>
+                    <div sec:authorize="!isAuthenticated()">
+                        <a class="nav-link active" href="#" th:href="@{/sign-in}">Sign In</a>
+                    </div>
+                    <div sec:authorize="isAuthenticated()">
+                        <a class="nav-link active" href="#" th:href="@{/account}">Account</a>
+                    </div>
+                    <div sec:authorize="isAuthenticated()">
+                        <a class="nav-link active" href="#" th:href="@{/logout}">Logout</a>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
-</nav>
-<br>
-<div sec:authorize="!isAuthenticated()">
-    <div th:if="${param.logout}">
-        <div class="alert alert-info">You have been logged out.</div>
+    </nav>
+
+    <br>
+
+    <section>
+        <div class="d-flex align-items-center flex-column gap-4">
+            <h1>Welcome to my fancy Bus Booking System</h1>
+            <br>
+            <form class="d-flex" method="get" autocomplete="off" th:action="@{/bus/search}" th:object="${searchData}">
+                <input class="form-control me-1" type="search" placeholder="Departure City"
+                       aria-label="Departure City" th:field="*{departureCity}">
+                <input class="form-control me-1" type="search" placeholder="Arrival City" aria-label="Arrival City" th:field="*{arrivalCity}">
+                <button class="btn btn-success" type="submit">Search</button>
+            </form>
+        </div>
+    </section>
+
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col">
+            </div>
+
+            <div class="col-12 text-center">
+                <br>
+                <!--a class="nav-link" th:href="@{/bus/departure/Kyiv}">All Buses from Kyiv</a-->
+                <div th:each="bus :${buses}">
+                    <br>
+                    <br>
+                    <div class="card text-center border border-success">
+                        <div class="card-body">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col align-self-center">
+                                        <h6 class="card-title"><span
+                                                th:text="${#temporals.format(bus.getDepartureTime(), 'dd-MM-yyyy HH:mm')}"></span>
+                                        </h6>
+                                        <h5 class="card-text">Departs from: <span
+                                                th:text="${bus.getDepartureCity()}"></span></h5>
+                                    </div>
+                                    <div class="col align-self-center">
+                                        <h6 class="card-title"><span
+                                                th:text="${#temporals.format(bus.getArrivalTime(), 'dd-MM-yyyy HH:mm')}"></span>
+                                        </h6>
+                                        <h5 class="card-text">Arrives to: <span
+                                                th:text="${bus.getArrivalCity()}"></span></h5>
+                                    </div>
+                                    <div class="col-4 align-self-center border-start">
+                                        <div class="row">
+                                            <div class="col align-self-center">
+                                                <p><span th:text="${bus.getTicketPrice()}"></span> UAN</p>
+                                                <p><span
+                                                        th:text="${#temporals.format(bus.getTravelTime(), 'HH:mm')}"></span>
+                                                    on the road
+                                                </p>
+                                            </div>
+                                            <div class="col align-self-center">
+                                                <p>
+                                                    <button type="button" class="btn btn-success">Choose</button>
+                                                </p>
+                                                <p><span th:text="${bus.getAvailableSeats().size()}"></span> seats
+                                                    left
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-footer text-muted">
+                            Bus: <span th:text="${bus.getName()}"></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+            </div>
+        </div>
     </div>
 </div>
 </body>
