--- a/BusBookingSystem/src/main/resources/templates/index.html
+++ b/BusBookingSystem/src/main/resources/templates/index.html
@@ -71,9 +71,11 @@
             <h1>Welcome to my fancy Bus Booking System</h1>
             <br>
             <form class="d-flex" method="get" autocomplete="off" th:action="@{/bus/search}" th:object="${searchData}">
-                <input class="form-control me-1" type="search" placeholder="Departure City"
+                <input class="form-control me-1" id="departure" type="search" placeholder="Departure City"
                        aria-label="Departure City" th:field="*{departureCity}">
-                <input class="form-control me-1" type="search" placeholder="Arrival City" aria-label="Arrival City" th:field="*{arrivalCity}">
+                <button class="btn btn-outline-success btn-sm me-1" type="button" onclick="swapValues()"><--></button>
+                <input class="form-control me-1" id="arrival" type="search" placeholder="Arrival City"
+                       aria-label="Arrival City" th:field="*{arrivalCity}">
                 <button class="btn btn-success" type="submit">Search</button>
             </form>
         </div>
@@ -86,7 +88,6 @@
 
             <div class="col-12 text-center">
                 <br>
-                <!--a class="nav-link" th:href="@{/bus/departure/Kyiv}">All Buses from Kyiv</a-->
                 <div th:each="bus :${buses}">
                     <br>
                     <br>
@@ -96,14 +97,14 @@
                                 <div class="row">
                                     <div class="col align-self-center">
                                         <h6 class="card-title"><span
-                                                th:text="${#temporals.format(bus.getDepartureTime(), 'dd-MM-yyyy HH:mm')}"></span>
+                                                th:text="${#temporals.format(bus.getDepartureTime(), 'd MMM HH:mm', #locale.forLanguageTag('EN'))}"></span>
                                         </h6>
                                         <h5 class="card-text">Departs from: <span
                                                 th:text="${bus.getDepartureCity()}"></span></h5>
                                     </div>
                                     <div class="col align-self-center">
                                         <h6 class="card-title"><span
-                                                th:text="${#temporals.format(bus.getArrivalTime(), 'dd-MM-yyyy HH:mm')}"></span>
+                                                th:text="${#temporals.format(bus.getArrivalTime(), 'd MMM HH:mm', #locale.forLanguageTag('EN'))}"></span>
                                         </h6>
                                         <h5 class="card-text">Arrives to: <span
                                                 th:text="${bus.getArrivalCity()}"></span></h5>
@@ -141,5 +142,13 @@
         </div>
     </div>
 </div>
+
+<script>
+    function swapValues() {
+        let tmp = document.getElementById("departure").value;
+        document.getElementById("departure").value = document.getElementById("arrival").value;
+        document.getElementById("arrival").value = tmp;
+    }
+</script>
 </body>
 </html>
