--- a/BusBookingSystem/src/main/resources/templates/register.html
+++ b/BusBookingSystem/src/main/resources/templates/register.html
@@ -91,7 +91,10 @@
                                 </button>
                             </div>
                             <div th:if="${param.success}">
-                                <div class="alert alert-info">You've successfully registered.</div>
+                                <div class="alert alert-info">You've successfully registered. You may now <a href="#" th:href="@{/sign-in}" class="text-dark">Sign In</a> into System.</div>
+                            </div>
+                            <div th:if="${param.error}">
+                                <div class="alert alert-info text-center">Email already exist.</div>
                             </div>
                         </form>
                     </div>
