--- a/BusBookingSystem/src/main/resources/templates/index.html
+++ b/BusBookingSystem/src/main/resources/templates/index.html
@@ -100,6 +100,9 @@
 
             <div class="col-12 text-center">
                 <br>
+                <div th:each="bus: ${noBuses}">
+                    <div class="alert alert-info">No buses was found with given search parameters.</div>
+                </div>
                 <div th:each="bus :${buses}">
                     <br>
                     <br>
