--- a/BusBookingSystem/src/main/resources/templates/account.html
+++ b/BusBookingSystem/src/main/resources/templates/account.html
@@ -22,8 +22,6 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-link active" aria-current="page" href="#" th:href="@{/}">Home</a>
-                <a class="nav-link" href="#">Features</a>
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
             </div>
         </div>
         <div class="navbar-collapse collapse w-100 order-3 dual-collapse2 justify-content-end">
@@ -57,10 +55,10 @@
                             <th scope="row">Email</th>
                             <td><span th:text="${#authentication.getPrincipal().getEmail()}"></span></td>
                         </tr>
-                        <tr>
+                        <!--tr>
                             <th scope="row">Password</th>
-                            <td><span th:text="${#authentication.getPrincipal().getPassword()}"></span></td>
-                        </tr>
+                            <td><span th:text="${user.password}"></span></td>
+                        </tr-->
                         </tbody>
                     </table>
                     <div class="text-center">
