Updated front-end features

--- a/BusBookingSystem/src/main/resources/templates/login.html
+++ b/BusBookingSystem/src/main/resources/templates/login.html
@@ -9,7 +9,7 @@
 </head>
 <body style="background-color: #e1f2ea">
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #178f13">
-    <div class="container-fluid">
+    <div class="container-fluid ms-3 me-3">
         <a class="navbar-brand">
             <img src="/assets/bus-icon.png" alt="" width="32" height="32" class="d-inline-block align-text-top">
             Bus Booking System
@@ -82,9 +82,6 @@
                             Don't have an account? <a href="#" th:href="@{/sign-up}" class="text-dark">Create One</a>
                         </div>
                     </div>
-                </div>
-                <div class="text-center mt-5 text-muted">
-                    Copyright &copy; 2023 &mdash; Volodymyr Shvets
                 </div>
             </div>
         </div>
