--- a/BusBookingSystem/src/main/resources/templates/account.html
+++ b/BusBookingSystem/src/main/resources/templates/account.html
@@ -9,7 +9,7 @@
 </head>
 <body style="background-color: #e1f2ea">
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #178f13">
-    <div class="container-fluid">
+    <div class="container-fluid ms-3 me-3">
         <a class="navbar-brand">
             <img src="/assets/bus-icon.png" alt="" width="32" height="32" class="d-inline-block align-text-top"
                  th:src="@{/assets/bus-icon.png}">
@@ -32,8 +32,7 @@
     </div>
 </nav>
 
-<div class="container">
-    <br>
+<div class="container mt-4">
     <div class="row">
         <div class="col">
             <div class="card border border-success">
@@ -69,7 +68,7 @@
         </div>
 
         <div class="col">
-            <div class="card border border-success">
+            <div class="card border border-success mb-4">
                 <div class="card-header text-center">
                     <h5 class="card-title">Tickets</h5>
                 </div>
@@ -82,8 +81,7 @@
                            th:href="@{/account/tickets}">Get User Tickets</a>
                     </div>
                     <div th:each="ticket :${tickets}">
-                        <br>
-                        <div class="card border border-info">
+                        <div class="card border border-info mt-3">
                             <div class="card-body">
                                 <div class="container">
                                     <div class="row">
