--- a/BusBookingSystem/src/main/resources/templates/payment.html
+++ b/BusBookingSystem/src/main/resources/templates/payment.html
@@ -11,7 +11,7 @@
 </head>
 <body style="background-color: #e1f2ea">
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #178f13">
-    <div class="container-fluid">
+    <div class="container-fluid ms-3 me-3">
         <a class="navbar-brand">
             <img src="/assets/bus-icon.png" alt="" width="32" height="32" class="d-inline-block align-text-top"
                  th:src="@{/assets/bus-icon.png}">
@@ -44,10 +44,9 @@
         </div>
     </div>
 </nav>
-<br><br>
-<div class="row align-items-center">
-    <div class="col">
 
+<div class="row align-items-center mt-4">
+    <div class="col">
     </div>
 
     <div class="col-6 text-center">
@@ -66,7 +65,6 @@
     </div>
 
     <div class="col">
-
     </div>
 </div>
 
