--- a/BusBookingSystem/src/main/resources/templates/preorder.html
+++ b/BusBookingSystem/src/main/resources/templates/preorder.html
@@ -11,7 +11,7 @@
 </head>
 <body style="background-color: #e1f2ea">
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #178f13">
-    <div class="container-fluid">
+    <div class="container-fluid ms-3 me-3">
         <a class="navbar-brand">
             <img src="/assets/bus-icon.png" alt="" width="32" height="32" class="d-inline-block align-text-top"
                  th:src="@{/assets/bus-icon.png}">
@@ -52,9 +52,7 @@
 
         <div class="col-8 align-self-center">
             <div th:each="bus :${currentBus}">
-                <br>
-                <br>
-                <div class="card border border-success">
+                <div class="card border border-success mt-4">
                     <div class="card-header">
                         Bus -> <span class="text-muted">Passenger</span> -> <span class="text-muted">Payment</span>
                     </div>
@@ -75,8 +73,7 @@
                             </div>
                         </div>
                         <div class="collapse" id="collapseText">
-                            <br>
-                            <div class="card text-center border border-success">
+                            <div class="card text-center border border-success mt-3">
                                 <div class="card-body">
                                     <div class="container">
                                         <div class="row">
@@ -109,8 +106,7 @@
                                 </div>
                             </div>
                         </div>
-                        <br>
-                        <a type="button" class="btn btn-danger" th:href="@{/checkout/{name}(name=${bus.getName()})}">Continue</a>
+                        <a type="button" class="btn btn-danger mt-3" th:href="@{/checkout/{name}(name=${bus.getName()})}">Continue</a>
                     </div>
                 </div>
             </div>
